# welo

./: .gitignore  DEPLOYMENT.md  README.md  add_sample_templates.py
snapbrander-backend/: .env  .env.example  pyproject.toml  snapbrander.db
snapbrander-backend/app/: auth.py  database.py  main.py  models.py  schemas.py
snapbrander-backend/app/routers/: ai_generator.py  analytics.py  auth.py  cpanel.py  domains.py  notifications.py  payments.py  projects.py  search.py  subscriptions.py  support.py  templates.py  wordpress.py
snapbrander-frontend/: package-lock.json  package.json
snapbrander-frontend/.next/: app-build-manifest.json  trace
snapbrander-frontend/.next/cache/: .rscinfo
snapbrander-frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
snapbrander-frontend/app/: layout.tsx  page.tsx
snapbrander-frontend/app/admin/: page.tsx
snapbrander-frontend/app/client-dashboard/: page.tsx
snapbrander-frontend/app/cpanel/: page.tsx
snapbrander-frontend/app/create-project/: page.tsx
snapbrander-frontend/app/dashboard/: page.tsx
snapbrander-frontend/app/domains/: page.tsx
snapbrander-frontend/app/downloads/: page.tsx
snapbrander-frontend/app/my-projects/: page.tsx
snapbrander-frontend/app/notifications/: page.tsx
snapbrander-frontend/app/payment/: page.tsx
snapbrander-frontend/app/profile/: page.tsx
snapbrander-frontend/components/: DashboardLayout.tsx  Sidebar.tsx  TopNavbar.tsx
snapbrander-frontend/utils/: api.ts
(+85 files in other folders)
